--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=SportsHub
 APP_ENV=local
 APP_KEY=base64:xWdLc4KY3iJKHCupluHuu1nDwvprk4OAqnsc6RRrGsA=
 APP_DEBUG=true
-APP_URL=http://localhost:8000
+QUEUE_CONNECTION
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
